[package]
name = "oauth-token-service"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
authors = [
    "Job Doesburg <job@jobdoesburg.nl>",
    "Julian van der Horst <julian.vanderhorst@ru.nl"
]
homepage = "https://github.com/NOLAI/oauth-token-service"
repository = "https://github.com/NOLAI/oauth-token-service"
documentation = "https://docs.rs/oauth-token-service"
description = "A service to request and renew JWTs from an identity service using OAuth"
readme = "README.md"

[dependencies]
oauth2 = { version = "5.0.0", features = ["reqwest", "rustls-tls", "reqwest-blocking"] }
base64 = "0.22.1"
thiserror = "1.0.69"
tokio = {version = "1", features = ["full"]}
log = "0.4.25"

[dev-dependencies]
mockito = "1.2"
